--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@import url(fonts.googleapis.com/css?family=Open+Sans:400,700,800); 
 
 /* ================================= 
   Base Element Styles
@@ -9,7 +8,6 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-shadow:none;
-    text-rendering: optimizeLegibility;
 }
 
 
@@ -19,7 +17,6 @@ body {
 	line-height: 1.6;
     background-color: #fafafa;/* fafafa */
 	color: #3a3a3a;
-    text-rendering: optimizeLegibility;
     font-weight: 400;
 }
 
@@ -156,6 +153,7 @@ nav {
 .col {
   margin-top: 25px;
   margin-bottom: 25px;
+  border: none;
 }
 
 .col h3 {
@@ -170,6 +168,7 @@ nav {
    max-width: 715px;
    width: 100%;
    margin-bottom: 30px;
+   box-shadow: 5px 5px 2px #888888;
 }
 
 .portfolio {
@@ -195,6 +194,7 @@ nav {
 
 .logo {
 	/* width: 200px; */
+    border: 1px solid #888888;
 }
 
 h1.headline {
@@ -208,6 +208,10 @@ h2.title {
     text-transform: uppercase;
     font-size: 1.1em;
     margin-bottom: 30px;
+}
+
+.col h3 {
+    color: cadetblue;
 }
 
 .tagline {
@@ -267,16 +271,17 @@ h2.title {
   .col {
       float: left;
       width: 49%;
-      margin-right: 2%;
+      
    }
 
-    .col:nth-child(2n){
-      margin-right: 0px;
-    }
+  .col:nth-child(2n+1) {
+      margin-right: 2%;
+  }
 
-    .col img {
-       /*max-width: 350px; */m
-    }
+  .col:nth-child(2n+3) {
+      clear: left;
+  }
+
 
     .col p {
         width: 90%;
@@ -416,19 +421,27 @@ h2.title {
 
   .col {
       width: 32%;
-      margin-right: 1.31%;
   }
 
-    .col:nth-child(3n){
+  .col:nth-child(2n+1) {
       margin-right: 0px;
+  }
+
+  .col:nth-child(2n+3) {
+      clear: none;
+  }
+
+    .col1{
+      margin-right: 1.55% !important; 
     }
 
-    .col:nth-child(2n){
-      margin-right: 1.31%;
+    .col2{
+      margin-right: 1.55% !important; 
     }
 
-   .col img {
 
+    .col3{
+      margin-right: 0px;
     }
 
    .mobile-only {
